--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <h3>Simple Personal Portfolio #1</h3>
                 <ul class="force-font">
                   <li>This was my first-ever web page written from scratch, developing skills in HTML and CSS.</li>
-                  <li>Here's the <a href="https://github.com/sam1cutler/SimpleWebPortfolio">GitHub repo for this project</a> and the <a href="https://sam1cutler.github.io/SimpleWebPortfolio/">actual web page</a>.</li>
+                  <li>Here's the <a href="https://github.com/sam1cutler/SimpleWebPortfolio">GitHub repo for this project</a> and the <a href="https://sam1cutler.github.io/SimpleWebPortfolio/">github.io web page</a>.</li>
                 </ul>
             </div>
 
@@ -109,7 +109,7 @@
               <h3>Simple Personal Portfolio #2</h3>
               <ul>
                 <li>This is the page you're currently on, in which I expanded my skillset to include working with the flexbox layout and media queries.</li>
-                <li>Here's the <a href="https://github.com/sam1cutler/FlexSimplePortfolio2">GitHub repo for this project</a>.</li>
+                <li>Here's the <a href="https://github.com/sam1cutler/FlexSimplePortfolio2">GitHub repo for this project</a> and the <a href="https://sam1cutler.github.io/FlexSimplePortfolio3/">github.io web page</a>.</li>
               </ul>
             </div>
           </div>
