--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="item">
               <h3>Simple Personal Portfolio #2</h3>
               <ul>
-                <li>This is the page you're currently on, in which I expanded my skillset to include working with the flexbox layout and media queries.</li>
+                <li>This project added to my first portfolio page, adding a flexbox layout and media queries.</li>
                 <li>Here's the <a href="https://github.com/sam1cutler/FlexSimplePortfolio2">GitHub repo for this project</a> and the <a href="https://sam1cutler.github.io/FlexSimplePortfolio3/">github.io web page</a>.</li>
               </ul>
             </div>
