Edited some content

--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
             <div class="item project-item">
               <h3>Personal Portfolio</h3>
                 <ul class="force-font">
-                  <li>The page you're currently viewing, in which I first deployed skills in HTML, CSS, use of a flexbox layout, and responsive navigation with media queries.</li>
+                  <li>The page you're currently viewing, a concise summary of some of my experience in software development and biology.</li>
+                  <li>Built with HTML, CSS, a flexbox layout, and responsive navigation with media queries.</li>
                   <li><a href="https://github.com/sam1cutler/Portfolio" target="_blank">GitHub repo </a></li>
                 </ul>
             </div>
