Altered favicon links to fix GitHub Pages issue

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Sam Cutler - Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?">
+    <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png?">
+    <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x192.png?">
     <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
@@ -35,7 +37,7 @@
         <!-- Intro -->
         <article id="intro" class="intro-container">
           <h2>Hello! I'm Sam.</h2>
-          <h3>I'm a fullstack software developer based in Seattle, WA.</h3>
+          <h3>I'm a full stack software developer based in Seattle, WA.</h3>
 
           <div class="portrait-container">
             <img src="images/Sam-on-Pratt-Mt.jpg" alt="Sam on Pratt Mt">
