Clean commit before implementing structural change to nav bar

--- a/index.html
+++ b/index.html
@@ -83,16 +83,15 @@
         <h2>ABOUT</h2>
         <div class='about-container'>
           <div class='portrait-container'>
-            <img src='images/Sam-on-Pratt-Mt.jpg' alt='Sam on Pratt Mt'>
+            <img src='images/Sam_headshot2_20201003_circle.png' alt='Sam headshot' class='portrait'>
           </div>
           <div class='about-content'>
-            <p>I am a full-stack Javascript developer with experience building beautiful, intuitive, highly functional apps using React, Node.js, Express, and PostgreSQL. 
+            <p>I am a full-stack Javascript developer with experience building [beautiful, intuitive, highly functional] apps using React, Node.js, Express, and PostgreSQL. 
               I also have experience in <a href='https://www.genetics.org/content/210/4/1543.long' target='_blank'>biology</a> <a href='https://www.nature.com/articles/nm.3229' target='_blank'>research</a> and education, including teaching at the college level. 
               With my background, I have great skills in problem-solving, troubleshooting, team collaboration, and communicating technical material to any audience.
               I am quick to learn and have great attention to detail, and I love to take on complex challenges.
-              In sum, I am well equipped to be a uniquely impactful contributor to any software development team.
-              Outside of coding, I love taking advantage of the Pacific Northwest outdoors, in particular rock climbing, backpacking, and skiing.
-              </p>
+              [In sum, I am well equipped to be a uniquely impactful contributor to any software development team.]</p>
+              <p>Outside of coding, I love taking advantage of the Pacific Northwest outdoors, in particular rock climbing, backpacking, and skiing.</p>
           </div>
         </div>
       </section>
@@ -121,6 +120,25 @@
               <a href='https://hike-tracker.vercel.app/' target='_blank' class='project-button'>View the app</a>
               <a href='https://github.com/sam1cutler/HikeTracker' target='_blank' class='project-button'>Client code</a>
               <a href='https://github.com/sam1cutler/HikeTrackerAPI' target='_blank' class='project-button'>Server Code</a>
+            </div>
+          </div>
+          <div class='project-container'>
+            <h3>BookFinder</h3>
+            <div class='project-screenshot-container'>
+              <img class='project-screenshot' src='images/screenshot_book-finder.png' alt='book-finder-app'>
+            </div>
+            <ul class='project-tech-list emphasized'>
+              <li>Javascript</li>
+              <li>jQuery</li>
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+            <div class='project-description'>
+              <p>Curate lists of book and author recommendations, get references about those recommendations, and buy used or locally-available copies of books.</p>
+            </div>
+            <div class='project-links-container'>
+              <a href='https://sam1cutler.github.io/BookFinder' target='_blank' class='project-button'>View the app</a>
+              <a href='https://github.com/sam1cutler/BookFinder' target='_blank' class='project-button'>Client code</a>
             </div>
           </div>
         </div>
