Fully updated Projects section and fixed header viewport issue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav>
       <div class='nav-container'>
         <div class='title-container'>
-          <a href="#">SAM CUTLER</a>
+          <a href="#">S<span class='small-caps'>AM</span> C<span class='small-caps'>UTLER</span></a>
         </div>
         <div class='nav-links-container'>
           <ul class='nav-contact-links-container'>
@@ -83,6 +83,31 @@
       <section class='projects-section' id='projects'>
         <h2>PROJECTS</h2>
         <div class='projects-section-container'>
+
+          <div class='project-container'>
+            <h3>What's Next?</h3>
+            <div class='project-screenshot-container'>
+              <img class='project-screenshot' src='images/screenshot_whats-next.png' alt='whats-next-app'>
+            </div>
+            <ul class='project-tech-list emphasized'>
+              <li>React</li>
+              <li>Node.js</li>
+              <li>Express</li>
+              <li>PostgreSQL</li>
+              <li>Mocha / Chai</li>
+              <li>Jest / Enzyme</li>
+              <li>JSON Web Token Authentication</li>
+            </ul>
+            <div class='project-description'>
+              <p>Track shows that you want to watch in the future and log shows that you've already watched. Identify the streaming service on which each show is available, as well as the genre and (for watched shows) the date completed and your rating. You can also make connections with other users to see their To-Watch Lists and Watched Logs.</p>
+            </div>
+            <div class='project-links-container'>
+              <a href='https://whats-next-five.vercel.app/' target='_blank' class='project-button'>View the app</a>
+              <a href='https://github.com/sam1cutler/WhatsNext' target='_blank' class='project-button'>Client code</a>
+              <a href='https://github.com/sam1cutler/WhatsNextAPI' target='_blank' class='project-button'>Server Code</a>
+            </div>
+          </div>
+
           <div class='project-container'>
             <h3>HikeTracker</h3>
             <div class='project-screenshot-container'>
@@ -106,6 +131,7 @@
               <a href='https://github.com/sam1cutler/HikeTrackerAPI' target='_blank' class='project-button'>Server Code</a>
             </div>
           </div>
+
           <div class='project-container'>
             <h3>BookFinder</h3>
             <div class='project-screenshot-container'>
@@ -125,6 +151,7 @@
               <a href='https://github.com/sam1cutler/BookFinder' target='_blank' class='project-button'>Client code</a>
             </div>
           </div>
+
         </div>
       </section>
       
