Updated README and removed unneeded div

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="desription" content="Sam Cutler's software development portfolio">
+    <meta name="description" content="Sam Cutler's software development portfolio">
     <title>Sam Cutler - Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -14,12 +14,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?">
     <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png?">
     <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x192.png?">
-    <link rel="manifest" href="/site.webmanifest">
     <script src="https://kit.fontawesome.com/714ccfffbd.js" crossorigin="anonymous"></script>
   </head>
-  <body>
 
-   <div class='total-container'>
+  <body>
+    
     <nav>
       <div class='nav-container'>
         <div class='title-container'>
@@ -191,7 +190,6 @@
         </li>
       </ul>
     </footer>
-   </div>
     
   </body>
 
