restored background-attachment fixed for non-mobile viewports

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    
+
     <nav>
       <div class='nav-container'>
         <div class='title-container'>
@@ -78,7 +78,7 @@
           </div>
           <div class='about-content'>
             <p>I'm a Seattle-based Javascript developer with experience building beautiful, intuitive apps using React, Node.js, Express, and PostgreSQL. 
-              I've also done a lot of <a href='https://www.genetics.org/content/210/4/1543.long' target='_blank'>biology</a> <a href='https://www.nature.com/articles/nm.3229' target='_blank'>research</a> and teaching, primarily at the college level. 
+              I've also spent time as a <a href='https://www.genetics.org/content/210/4/1543.long' target='_blank'>biology</a> <a href='https://www.nature.com/articles/nm.3229' target='_blank'>researcher</a> and teacher, primarily at the college level. 
               While conducting my PhD research, I used a lot of Python, Bash, and R, and found that I loved programming, creating highly functional digital tools to improve life for myself and my colleagues in lab.</p>
               <p>With my background, I've developed great skills in problem-solving, troubleshooting, team collaboration, and communicating technical material to any audience.
               I am quick to learn and have great attention to detail, and I love to take on complex challenges.</p>
